--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<ul>
 		<li>Establishing a Major Thirds Type Scale</li>
 		<li>Using EM as a font size</li>
-		<li>Assigning Font Stacks</li>
+		<li>Assigning Font Stacks using Google Fonts</li>
 		<li>Changing Font Line Heigth</li>
 		<li>Using the Address Element</li>
 	</ul>
