--- a/index.html
+++ b/index.html
@@ -1,70 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="description"
-		content="Example 2 of Fundamentals of Web Development" />
-	<meta name="keywords"
-		content="Example 2, Test, CSS Usage" />
-	<meta http-equiv="author"
-		content="Adam Donner" />
-	<meta name="robots"
-		contents="nofollow" />
-		
-	<title>Adam Donner</title>
-		<link href="https://fonts.googleapis.com/css?family=Oswald:300,500,700|Quattrocento" rel="stylesheet">
-	<!--Quattrocento font stack is only available in 400 and 700 thus there is no need to call 400 and 700 in link-->
-	<link href="style.css" type="text/css" rel="stylesheet" />
-</head>
+	<meta charset="UTF-8">
+	<title>Amy Donner bioSite</title>
+	<meta name="description" content="Amy Donner's Biography">
+	<meta name="keywords" content "amy,donner,stanton,bennington,nebraska,twins,perten">
+	<meta name="author" content="Adam Donner">
+<link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i|Oswald:300,500,700" rel="stylesheet">
+	<link href="_styles/style.css" type="text/css" rel="stylesheet" />
 
+</head>
 <body>
-	<div id="container">
-	<h1>
-		Title - Week 3
-	</h1>
-	<h2>
-		Chapter - Assignment 3.2
-	</h2>
-	<p class="intro"><span id="unique">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> Duis facilisis imperdiet dui at scelerisque. Proin quis nibh nulla. Nunc nisi leo, egestas vel lacinia nec, rhoncus a quam. Morbi maximus cursus erat. Sed eu elit blandit, pretium ante eu, rutrum nibh. Suspendisse potenti. Morbi nec interdum eros, a blandit urna. Maecenas quis lorem at metus tempor varius sit amet at augue. Phasellus congue nec odio condimentum feugiat.</p>
-	<p>Ut in interdum leo. Pellentesque quis aliquet metus. Morbi venenatis dui urna, quis vehicula metus sodales vitae. Nulla nec volutpat lectus. Sed posuere nibh in nisi faucibus, semper blandit felis commodo. Suspendisse at orci vel elit feugiat sollicitudin. Phasellus nec lacus tincidunt elit sollicitudin tempor vitae nec mauris. Nullam pellentesque hendrerit elit, ut sollicitudin felis condimentum tincidunt. Nullam ut metus nec enim scelerisque rutrum a non diam. Cras vel aliquet tellus, vel interdum massa. In sit amet laoreet nisl. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla nibh purus, faucibus nec justo convallis, ultrices facilisis quam.</p>
-	
-	<p>In vehicula, nulla in mollis consequat, justo erat iaculis felis, et ornare diam lacus vitae sapien. Cras finibus, leo et volutpat pulvinar, felis arcu suscipit nibh, in hendrerit neque velit nec sapien. In aliquam, nibh ut venenatis porta, ante nunc vestibulum diam, id ullamcorper diam diam ut leo. Phasellus vitae est vel nulla fringilla bibendum quis vel erat. Vestibulum mi odio, mattis at gravida hendrerit, porta eget orci. Praesent ut pharetra enim. Maecenas erat urna, dictum vitae leo ac, interdum hendrerit risus. Donec semper dignissim leo, nec semper nulla aliquet a.</p>
-	
-	<p>Mauris commodo, metus sed sollicitudin facilisis, enim erat bibendum nibh, ac ultrices neque arcu in nisi. Praesent nibh lectus, suscipit eget ultrices quis, viverra non dolor. Nulla et tincidunt purus. Mauris vitae risus risus. Aliquam sollicitudin laoreet sem ac pretium. Nam suscipit dui eros, vel facilisis felis rhoncus sed. <span class="sentance">Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum fringilla mauris non hendrerit blandit. Maecenas varius sollicitudin dictum. Cras tempor hendrerit nulla a faucibus.</span></p>
-	<hr />
-    <address>
-      Contact Me:<br>   
-      Adam Donner<br>
-      1000 Galvis Rd S<br>
-      Bellevue, NE 68005
-    </address>
-    <a href=mailto:adonner@my365.bellevue.edu/>adonner@my365.bellevue.edu</a>
-    <h3>
-	    Top Ten Movies:
-	</h3>   
-    <ol>
-	    <li>Hackers</li>
-	    <li>The Matrix</li>
-	    <li>Office Space</li>
-	    <li>The Social Network</li>
-	    <li>Empire Strikes Back</li>
-	    <li>Jurrassic Park</li>
-	    <li>Lord of the Rings Return of the King</li>
-	    <li>Kick-Ass</li>
-	    <li>Zombieland</li>
-	    <li>Sin City</li>
-	</ol>
-	<h3>
-		 Five Things I learned last week in this class:
-	 </h3>
-	<ul>
-		<li>Establishing a Major Thirds Type Scale</li>
-		<li>Using EM as a font size</li>
-		<li>Assigning Font Stacks using Google Fonts</li>
-		<li>Changing Font Line Heigth</li>
-		<li>Using the Address Element</li>
-	</ul>
-	    <a href="https://thenextweb.com/">The Next Web</a><br>
-		<a href="#container">back to top</a>
+	<div class="container">
+		<div class="bio">
+			<img src="_images/amytwinspark.jpg" alt="Amy Headshot" class="headshot"/>
+			<h1 class="name">
+				Amy Donner
+			</h1>
+
+			<h1 class="about">About Amy</h1>
+			<p> <img src="_images/familymarket.jpg" alt="Family Picture in the Park" class="familypark"/>Amy grew up in a small town in northeast Nebraska with a population of 1,500. Although it is was just Amy and her mother, she was constantly surrounded by family. One of her favorite memories growing up is the entire family; aunts, uncles and cousins would get together on Sunday after church to play cards well into the night. Amy attended kindergarten through high school at Stanton Public Schools. After high school, Amy attended Wayne State College where she met the love of her life and future husband. She graduated with honors from Wayne 							State with a Bachelor’s of Science in Biology. After graduating, Amy moved to Lincoln to start the next chapter of her life and kickstart her career. 
+			<p>In 2001 Amy married her college sweetheart Adam, they continued to live in Lincoln, Nebraska until 2005. After eight years of marriage, Amy and Adam welcomed Alexander and Owen into the world. Amy and her family now live in Bennington, Nebraska where the twins are in fourth grade and attend Herritage Elementry School.<p>
+			</p>
+		
+		</div>
+		<hr />
+		<div class="volunteer">
+			<h1 class="givingback">Giving Back</h1>
+			<figure class="airplane"> <img src="_images/sac%20musem.jpg" alt="Amy with B-29 Bomber"/>
+					<figcaption>Amy standing Under B-29 Bomber at the Museum</figcaption>
+			</figure>
+				<p>When not spending time with her family Amy enjoys giving back to the community wherever possible. You may see Amy ringing a bell outside of your local supermarket during the holidays or working at the local food bank. Amy has a been volunteering every year for the Fight for Air Corporate Cup for the American Lung Association.  Amy is also a volunteer docent giving tours at the Strategic Air Command Museum.</p>
+							<p>Additionally, Amy is active in the local elementary school by being a member of the Heritage Elementary School PTO. She is the chair of many events, one of which is the school carnival. Amy has been a room parent for each of the boys classes in which she plans the class parties, themes for the parties and fun activities to go along with each event.</p>
+							<p>Amy's favorite quote and a quote she tries to live her life by is from Winston Churchill: <q>We make a living by what we get, but we make a life by what we give.</q></p>
+			<img src="_images/badger.jpg" alt="Welcome Back Heritage Badgers" />
+		</div>
+		<hr />
+		<div class="hobbies">
+			<h1 class="hobby">Hobbies</h1>
+			<figure class="flag"> <img src="_images/amyswitzerland.jpg" alt="Amy and Adam on Mountian under Swiss Flag"/>
+				<figcaption>Amy and Adam top of Jungfraujoch in Switzerland</figcaption>
+			</figure>
+			<p>Amy enjoys staying active. Her hobbies include baking/cooking, gardening, camping, woodworking, kickboxing, and traveling. Amy loves to bake for family and friends. She even gets the kids involved. Their favorite part is licking the bowl. In the summers you can find Amy and her family camping at their favorite spot, the Calamus State Recreation Area. Amy grew up gardening with her grandmother and still loves to today. She is continually adding more flowers and other plants around the outside of the house. Amy also enjoys using power tools and has built many different pieces of furniture such as a tv stand, coffee table and faux fireplace. Staying healthy and active is important to Amy. She enjoys kickboxing and strength training at the Northwest location of Farrells. Amy is a world traveler and she along with her husband Adam have been all over Europe.  Amy’s favorite country that she has visited in Europe is Switzerland.</p>
+		<hr />
+		</div>
+			<div class="professional">
+			<h1 class="career">Professional Career</h1>
+			<figure class="demo"> <img src="_images/labdemo.jpg" alt="Amy and labratory device."/>
+				<figcaption>Amy preparing for a lab demonstration</figcaption>
+			</figure>
+			<p>Amy has always had a love of science. After graduation from college, Amy worked for a small DNA analysis company in Lincoln, Nebraska called GeneSeek. Amy was the Manager of Diagnostics for 4 years. While at GeneSeek, Amy was part of a group of scientists that worked with the USDA to help track bovine spongiform encephalopathy or “Mad Cow Disease”.</p>
+			<p>Amy took her love of science and moved on to a sales role with a research laboratory products company. Amy stayed with this company for seven years and decided to leave shortly after the birth of her twin boys.</p>
+			<p>She then took a couple of years to stay home with her boys. As they started preschool she went back to work in the non profit/event management field. Science kept calling her back. She now is working for a company that provides analytical instruments for quality testing of grain, oilseed, flour, feed, starch, dough, dairy products and many other agri and food products. <a href="https://www.linkedin.com/in/amy-donner-6571136/">Connect with Amy on LinkedIn</a></p>
+		</div>
+		<hr />
 	</div>
 </body>
 </html>
