--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<meta name="keywords" content "amy,donner,stanton,bennington,nebraska,twins,perten">
 	<meta name="author" content="Adam Donner">
 <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i|Oswald:300,500,700" rel="stylesheet">
-	<link href="_styles/style.css" type="text/css" rel="stylesheet" />
+	<link href="adonner.github.io/_styles/style.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
 	<div class="container">
 		<div class="bio">
-			<img src="_images/amytwinspark.jpg" alt="Amy Headshot" class="headshot"/>
+			<img src="adonner.github.io/_images/amytwinspark.jpg" alt="Amy Headshot" class="headshot"/>
 			<h1 class="name">
 				Amy Donner
 			</h1>
