--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 	<meta name="keywords" content "amy,donner,stanton,bennington,nebraska,twins,perten">
 	<meta name="author" content="Adam Donner">
 <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i|Oswald:300,500,700" rel="stylesheet">
-	<link href="https://adonner.github.io/_styles/style.css" type="text/css" rel="stylesheet" />
+	<link href="styles/style.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
 	<div class="container">
 		<div class="bio">
-			<img src="https://adonner.github.io/_images/amytwinspark.jpg" alt="Amy Headshot" class="headshot"/>
+			<img src="images/amytwinspark.jpg" alt="Amy Headshot" class="headshot"/>
 			<h1 class="name">
 				Amy Donner
 			</h1>
 
 			<h1 class="about">About Amy</h1>
-			<p> <img src="_images/familymarket.jpg" alt="Family Picture in the Park" class="familypark"/>Amy grew up in a small town in northeast Nebraska with a population of 1,500. Although it is was just Amy and her mother, she was constantly surrounded by family. One of her favorite memories growing up is the entire family; aunts, uncles and cousins would get together on Sunday after church to play cards well into the night. Amy attended kindergarten through high school at Stanton Public Schools. After high school, Amy attended Wayne State College where she met the love of her life and future husband. She graduated with honors from Wayne 							State with a Bachelor’s of Science in Biology. After graduating, Amy moved to Lincoln to start the next chapter of her life and kickstart her career. 
+			<p> <img src="images/familymarket.jpg" alt="Family Picture in the Park" class="familypark"/>Amy grew up in a small town in northeast Nebraska with a population of 1,500. Although it is was just Amy and her mother, she was constantly surrounded by family. One of her favorite memories growing up is the entire family; aunts, uncles and cousins would get together on Sunday after church to play cards well into the night. Amy attended kindergarten through high school at Stanton Public Schools. After high school, Amy attended Wayne State College where she met the love of her life and future husband. She graduated with honors from Wayne 							State with a Bachelor’s of Science in Biology. After graduating, Amy moved to Lincoln to start the next chapter of her life and kickstart her career. 
 			<p>In 2001 Amy married her college sweetheart Adam, they continued to live in Lincoln, Nebraska until 2005. After eight years of marriage, Amy and Adam welcomed Alexander and Owen into the world. Amy and her family now live in Bennington, Nebraska where the twins are in fourth grade and attend Herritage Elementry School.<p>
 			</p>
 		
@@ -27,18 +27,18 @@
 		<hr />
 		<div class="volunteer">
 			<h1 class="givingback">Giving Back</h1>
-			<figure class="airplane"> <img src="_images/sac%20musem.jpg" alt="Amy with B-29 Bomber"/>
+			<figure class="airplane"> <img src="images/sac%20musem.jpg" alt="Amy with B-29 Bomber"/>
 					<figcaption>Amy standing Under B-29 Bomber at the Museum</figcaption>
 			</figure>
 				<p>When not spending time with her family Amy enjoys giving back to the community wherever possible. You may see Amy ringing a bell outside of your local supermarket during the holidays or working at the local food bank. Amy has a been volunteering every year for the Fight for Air Corporate Cup for the American Lung Association.  Amy is also a volunteer docent giving tours at the Strategic Air Command Museum.</p>
 							<p>Additionally, Amy is active in the local elementary school by being a member of the Heritage Elementary School PTO. She is the chair of many events, one of which is the school carnival. Amy has been a room parent for each of the boys classes in which she plans the class parties, themes for the parties and fun activities to go along with each event.</p>
 							<p>Amy's favorite quote and a quote she tries to live her life by is from Winston Churchill: <q>We make a living by what we get, but we make a life by what we give.</q></p>
-			<img src="_images/badger.jpg" alt="Welcome Back Heritage Badgers" />
+			<img src="images/badger.jpg" alt="Welcome Back Heritage Badgers" />
 		</div>
 		<hr />
 		<div class="hobbies">
 			<h1 class="hobby">Hobbies</h1>
-			<figure class="flag"> <img src="_images/amyswitzerland.jpg" alt="Amy and Adam on Mountian under Swiss Flag"/>
+			<figure class="flag"> <img src="images/amyswitzerland.jpg" alt="Amy and Adam on Mountian under Swiss Flag"/>
 				<figcaption>Amy and Adam top of Jungfraujoch in Switzerland</figcaption>
 			</figure>
 			<p>Amy enjoys staying active. Her hobbies include baking/cooking, gardening, camping, woodworking, kickboxing, and traveling. Amy loves to bake for family and friends. She even gets the kids involved. Their favorite part is licking the bowl. In the summers you can find Amy and her family camping at their favorite spot, the Calamus State Recreation Area. Amy grew up gardening with her grandmother and still loves to today. She is continually adding more flowers and other plants around the outside of the house. Amy also enjoys using power tools and has built many different pieces of furniture such as a tv stand, coffee table and faux fireplace. Staying healthy and active is important to Amy. She enjoys kickboxing and strength training at the Northwest location of Farrells. Amy is a world traveler and she along with her husband Adam have been all over Europe.  Amy’s favorite country that she has visited in Europe is Switzerland.</p>
@@ -46,7 +46,7 @@
 		</div>
 			<div class="professional">
 			<h1 class="career">Professional Career</h1>
-			<figure class="demo"> <img src="_images/labdemo.jpg" alt="Amy and labratory device."/>
+			<figure class="demo"> <img src="images/labdemo.jpg" alt="Amy and labratory device."/>
 				<figcaption>Amy preparing for a lab demonstration</figcaption>
 			</figure>
 			<p>Amy has always had a love of science. After graduation from college, Amy worked for a small DNA analysis company in Lincoln, Nebraska called GeneSeek. Amy was the Manager of Diagnostics for 4 years. While at GeneSeek, Amy was part of a group of scientists that worked with the USDA to help track bovine spongiform encephalopathy or “Mad Cow Disease”.</p>
