--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content "amy,donner,stanton,bennington,nebraska,twins,perten">
 	<meta name="author" content="Adam Donner">
 <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i|Oswald:300,500,700" rel="stylesheet">
-	<link href="https://gitgub.io/styles/style.css" type="text/css" rel="stylesheet" />
+	<link href="styles/style.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
