--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
 
 </head>
 <body>
-	<div class="container">
-		<div class="bio">
+	<div id="container">
+			<header class="head">
+				<a class="aboutlink" href="#about">About</a>
+				<a class="givinglink" href="#givingback">Giving Back</a>
+				<a class="hobbylink" href="#hobby">Hobbies</a>
+				<a class="careerlink" href="#career">Professional Career</a>
+			</header>
+			
+
+		<div class="hero">
 			<img src="images/amytwinspark.jpg" alt="Amy with her twin boys" class="hero"/>
+			
 			<h1 class="name">
 				Amy Donner
 			</h1>
+			
+		</div>
+		<div class="bio">
+			<h1 id="about">About Amy</h1>
 
-			<h1 class="about">About Amy</h1>
 			<figure class="familymarket">
 			 <img src="images/familymarket.jpg" alt="Amy with her husband and twin boys"/>
 			 	<figcaption>Amy and her family in Old Market</figcaption>
@@ -26,17 +38,20 @@
 			<p>Amy grew up in a small town in northeast Nebraska with a population of 1,500. Although it is was just Amy and her mother, she was constantly surrounded by family. One of her favorite memories growing up is the entire family; aunts, uncles and cousins would get together on Sunday after church to play cards well into the night. Amy attended kindergarten through high school at Stanton Public Schools. After high school, Amy attended Wayne State College where she met the love of her life and future husband. She graduated with honors from Wayne 							State with a Bachelor’s of Science in Biology. After graduating, Amy moved to Lincoln to start the next chapter of her life and kickstart her career. 
 			<p>In 2001 Amy married her college sweetheart Adam, they continued to live in Lincoln, Nebraska until 2005. After eight years of marriage, Amy and Adam welcomed Alexander and Owen into the world. Amy and her family now live in Bennington, Nebraska where the twins are in fourth grade and attend Herritage Elementry School.<p>
 			</p>
+			
+		<a class="aboutop" href="#container">Back to Top</a>
 		
 		</div>
 		<hr />
 		<div class="volunteer">
-			<h1 class="givingback">Giving Back</h1>
+			<h1 id="givingback">Giving Back</h1>
 			<figure class="airplane"> <img src="images/sac%20musem.jpg" alt="Amy with B-29 Bomber"/>
 					<figcaption>Amy standing with a B-29 Bomber at the Strategic Air Command Museum</figcaption>
 			</figure>
-				<p>When not spending time with her family Amy enjoys giving back to the community wherever possible. You may see Amy ringing a bell outside of your local supermarket during the holidays or working at the local food bank. Amy has been volunteering every year for the Fight for Air Corporate Cup for the American Lung Association.  Amy is also a volunteer docent giving tours at the Strategic Air Command Museum.</p>
+				<p>When not spending time with her family Amy enjoys giving back to the community wherever possible. You may see Amy ringing a bell outside of your local supermarket during the holidays or working at the local food bank.</p> <p>Amy has been volunteering every year for the Fight for Air Corporate Cup for the American Lung Association.  Amy is also a volunteer docent giving tours at the Strategic Air Command Museum.</p>
 							<p>Additionally, Amy is active in the local elementary school by being a member of the Heritage Elementary School PTO. She is the chair of many events, one of which is the school carnival. Amy has been a room parent for each of the boys classes in which she plans the class parties, themes for the parties and fun activities to go along with each event.</p>
-							<p>Amy's favorite quote and a quote she tries to live her life by is from Winston Churchill: <q>We make a living by what we get, but we make a life by what we give.</q></p>
+							<p class="quote">Amy's favorite quote and a quote she tries to live her life by is from Winston Churchill:<br> <i><q>We make a living by what we get, but we make a life by what we give.</q></i></p>
+							<a class="volunteertop" href="#container">Back to Top</a>
 			<figure class="ptosign">
 			<img src="images/badger.jpg" alt="Welcome Back Heritage Badgers Sign" />
 				<figcaption>Twins with first day of school sign sponsored by the PTO</figcaption>
@@ -44,23 +59,27 @@
 		</div>
 		<hr />
 		<div class="hobbies">
-			<h1 class="hobby">Hobbies</h1>
+			<h1 id="hobby">Hobbies</h1>
 			<figure class="flag"> <img src="images/amyswitzerland.jpg" alt="Amy and Adam on Mountian under Swiss Flag"/>
 				<figcaption>Amy and Adam top of Jungfraujoch in Switzerland</figcaption>
 			</figure>
 			<p>Amy enjoys staying active. Her hobbies include baking/cooking, gardening, camping, woodworking, kickboxing, and traveling. Amy loves to bake for family and friends. She even gets the kids involved. Their favorite part is licking the bowl. In the summers you can find Amy and her family camping at their favorite spot, the Calamus State Recreation Area. Amy grew up gardening with her grandmother and still loves to today. She is continually adding more flowers and other plants around the outside of her house. Amy also enjoys using power tools and has built many different pieces of furniture such as a tv stand, coffee table and faux fireplace. Staying healthy and active is important to Amy. She enjoys kickboxing and strength training at the Northwest location of Farrells. Amy is a world traveler and she along with her husband Adam have been all over Europe.  Amy’s favorite country that she has visited in Europe is Switzerland.</p>
+			<a class="hobbiestop" href="#container">Back to Top</a>
 		<hr />
 		</div>
 			<div class="professional">
-			<h1 class="career">Professional Career</h1>
+			<h1 id="career">Professional Career</h1>
 			<figure class="demo"> <img src="images/labdemo.jpg" alt="Amy and labratory device."/>
 				<figcaption>Amy preparing for a lab demonstration</figcaption>
 			</figure>
 			<p>Amy has always had a love of science. After graduation from college, Amy worked for a small DNA analysis company in Lincoln, Nebraska called GeneSeek. Amy was the Manager of Diagnostics for 4 years. While at GeneSeek, Amy was part of a group of scientists that worked with the USDA to help track bovine spongiform encephalopathy or “Mad Cow Disease”.</p>
 			<p>Amy took her love of science and moved on to a sales role with a research laboratory products company. Amy stayed with this company for seven years and decided to leave shortly after the birth of her twin boys.</p>
-			<p>She then took a couple of years to stay home with her boys. As they started preschool she went back to work in the non profit/event management field. Science kept calling her back. She now is working for a company that provides analytical instruments for quality testing of grain, oilseed, flour, feed, starch, dough, dairy products and many other agri and food products. <a href="https://www.linkedin.com/in/amy-donner-6571136/">Connect with Amy on LinkedIn</a></p>
+			<p>She then took a couple of years to stay home with her boys. As they started preschool she went back to work in the non profit/event management field. Science kept calling her back. She now is working for a company that provides analytical instruments for quality testing of grain, oilseed, flour, feed, starch, dough, dairy products and many other agri and food products.</p>
+		<a class="careertop" href="#container">Back to Top</a>
 		</div>
-		<hr />
 	</div>
+	<footer>
+		<a href="https://www.linkedin.com/in/amy-donner-6571136/">Connect with Amy on LinkedIn</a>
+	</footer>
 </body>
 </html>
