--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ $("#submit").click(function(e) {
 
     $.ajax({
         type: "POST",
-        url: 'https://roikeprh8k.execute-api.us-east-2.amazonaws.com/email',
+        url: 'https://roikeprh8k.execute-api.us-east-2.amazonaws.com/email/',
         contentType: 'application/json',
         data: JSON.stringify({
             'name': name,
