--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adam Donner</title>
     <!--Using the Bootstrap CSS framework for base stylesheet. https://getbootstrap.com-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
     <!--Using Font Awesome for icons. https://fontawesome.com-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+          integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+          crossorigin="anonymous">
     <link href="styles/style.css" rel="stylesheet">
   </head>
 
@@ -37,7 +41,6 @@
     </nav>
 
   <!--Introduction-->
-
     <div class="hero-image" id="home">
       <img src="img/background.jpg" alt="open apple laptop">
       <div class="carousel-caption">
@@ -83,7 +86,8 @@
               <p>I later accepted a position as a Regional Sales Manager at a software company that develops voice and imaging technology.
               As a Regional Sales Manager I was responsible for a quarter of the US in my vertical market. I was traveling across the country for work
               every week until my twin boys, Owen and Alexander were born.</p>
-              <p>After five years I decided to it was time get off the road. I accepted the position of Director of Sales and Marketing for a local company where my team and I were responsible for selling and developing e-commerce sites for key accounts in Nebraska and Iowa. </p>
+              <p>After five years I decided to it was time get off the road. I accepted the position of Director of Sales and Marketing for a local
+                company where my team and I were responsible for selling and developing e-commerce sites for key accounts in Nebraska and Iowa. </p>
               <p>I am currently a student at Bellevue University studying Web Development.</p>
             <p>I live in Omaha Nebraska with my beautiful wife, twin boys, and golden retriever.
                 In my spare time, I enjoy camping, mountain biking, and hiking.</p>
@@ -177,15 +181,20 @@
       <div class="row padding">
           <div class="col-md-12 col-lg-9">
             <h2>My Development Approach</h2>
-            <p>I always start my development with a pen and paper, sketching out my ideas.  I feel this is the best way to get your designs perfected, along with allowing you to make changes to your design rather quickly.
-               With those sketches and some inspirations surrounding me I get a feel for colors and fonts.  These colors and fonts may change slightly through the development process. However, this is an excellent starting point.
+            <p>
+                I always start my development with a pen and paper, sketching out my ideas.  I feel this is the best way to get your designs perfected,
+                along with allowing you to make changes to your design rather quickly.With those sketches and some inspirations surrounding me I get a
+                feel for colors and fonts.  These colors and fonts may change slightly through the development process. However, this is an excellent
+                starting point.
             </p>
             <p>
-                Once everything is on paper, it is time to get my hands dirty with the development.  My priority is the look and feel of the website first.  Once I am confident in the layout of the website I can add the JavaScript that will provide the full functionality of the website.
+                Once everything is on paper, it is time to get my hands dirty with the development.  My priority is the look and feel of the website
+                first.  Once I am confident in the layout of the website I can add the JavaScript that will provide the full functionality of the website.
             </p>
             <p>
-                Before the website can be launched to the public, it is essential the there is a thorough quality check.  I test the website on multiple browsers and multiple screen sizes for mobile browsing.  Doing this, allows me ensure that all of the features work as intended on all browsers.
-                  After the quality check is complete and I am happy with the results, we can launch the website to the public!
+                Before the website can be launched to the public, it is essential the there is a thorough quality check.  I test the website on multiple
+                browsers and multiple screen sizes for mobile browsing.  Doing this, allows me ensure that all of the features work as intended on all browsers.
+                After the quality check is complete and I am happy with the results, we can launch the website to the public!
             </p>
             <br>
           </div>
@@ -210,9 +219,12 @@
           <br>
           <input class="btn btn-primary btn-sm" type="submit" value="Submit">
         </form>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe> <!--remove form after submission-->
-    <div class="text-right">
-      <a href="https://www.linkedin.com/in/adam-donner-6a72293a?trk=people-guest_profile-result-card_result-card_full-click"><i class="fab fa-linkedin"></i></a> <!--LinkedIn icon and link to personal account.-->
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+  <!--LinkedIn icon and link to personal account.-->
+    <div class="text-right social">
+      <a href="https://www.linkedin.com/in/adam-donner-6a72293a?trk=people-guest_profile-result-card_result-card_full-click"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/adonner"><i class="fab fa-github-square"></i></a>
+      <a href="https://twitter.com/adamdonner"><i class="fab fa-twitter-square"></i></a>
     </div>
   </footer>
 
@@ -232,7 +244,7 @@
      // This displays confirmation to the user when the gmail form has been submitted and fades the form out.
      $('#gform').on('submit', function(e) {
        $('#gform *').fadeOut(2000);
-       $('#gform').prepend('Thank you for your interest, I look forward to connecting with!');
+       $('#gform').prepend('Thank you for your interest, I look forward to connecting with you!');
      });
 
    });
