--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+============================================
+; Title: Portfolio
+; Author: Adam Donner
+; Date: 19 May 2019
+; Modified By: Adam Donner
+; Description: Index page
+;===========================================
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -81,7 +92,7 @@
             <h3>Web Developer, Marketing Professional, Product Manager</h3>
             <p>I have spent the past 15 years of my career in the software industry in both the engineering and sales/marketing divisions.</p>
             <p> I received my first degree from the University of Nebraska with a Bachelors in Management with an Information Systems focus.</p>
-            <p>After graduation I started my career as a software engineer for a publically traded company that develops hardware devices.</p>
+            <p>After graduation I started my career as a software engineer for a publicly traded company that develops hardware devices.</p>
               <p>I spent four years as an software engineer for that organization before moving into a Regional Manager of both the engineers and software salespeople.</p>
               <p>I later accepted a position as a Regional Sales Manager at a software company that develops voice and imaging technology.
               As a Regional Sales Manager I was responsible for a quarter of the US in my vertical market. I was traveling across the country for work
