--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
     <div class="container-fluid">
-      <div class="toggle"> <!--Humburger menu icon, hidden until viewed on smaller screens-->
+      <div class="toggle"> <!--Hamburger menu icon, hidden until viewed on smaller screens-->
           <i class="fa fa-bars menu" aria-hidden="true"></i>
       </div>
       <ul class="navbar-nav mr-auto" id="list">
