--- a/index.html
+++ b/index.html
@@ -184,8 +184,41 @@
             </div>
     </div>
     </div>
+<!--Presentations and Sketches-->
+<div class="container-fluid padding" id="portfolio">
+  <div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Sketches and Presentations</h1>
+    </div>
+    <hr>
+  </div>
+  </div>
 
+  <div class="container-fluid padding">
+    <div class="row padding">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="card">
+          <img class="card-img-top" src="" alt="Presentations">
+          <div class="card-body">
+            <h4 class="card-title">Web-420 Presentations</h4>
+            <p>Here is the presentations that I have completed for RESTful APIs.</p>
+            <a href="web-420/donner-rest.html" class="btn btn-outline-secondary">Presentations</a>
+          </div>
+        </div>
+      </div>
 
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="card">
+          <img class="card-img-top" src="" alt="Sketches">
+          <div class="card-body">
+            <h4 class="card-title">Web-335 Sketches</h4>
+            <p>Here is the sketches that I have created for Introduction to NoSQL.</p>
+            <a href="web-335/donner-diagrams.html" class="btn btn-outline-secondary">Sketches</a>
+          </div>
+        </div>
+      </div>
+  </div>
+  </div>
 
   <!--- Development approach -->
     <div class="container-fluid padding" id="contactme">
