Added images and videos

--- a/web-335/donner-diagrams.html
+++ b/web-335/donner-diagrams.html
@@ -63,7 +63,7 @@
 
   <div class="container-fluid padding">
   <div class="row padding">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
       <div class="card">
         <img class="card-img-top thumbnail" src="../img/donner-assignment-1.4-ORD.png" alt="Adam's wife Amy with their twin boys">
         <div class="card-body">
@@ -73,13 +73,33 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
       <div class="card">
         <img class="card-img-top thumbnail" src="../img/donner-assignment-1.4-NoSQL.png" alt="Adam's wife Amy with their twin boys">
         <div class="card-body">
           <h4 class="card-title">Assignment 1.4</h4>
           <p>This is a diagram of NoSQL of a 1 to 1 and 1 to Many Representation.</p>
           <a target="_blank" href="../img/donner-assignment-1.4-NoSQL.png" class="btn btn-outline-secondary">NoSQL</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="card">
+        <img class="card-img-top thumbnail" src="../img/donner-assignment-2.2.png" alt="Adam's wife Amy with their twin boys">
+        <div class="card-body">
+          <h4 class="card-title">Assignment 1.4</h4>
+          <p>This is a diagram of both the ORD of a 1 to 1 and 1 to Many Representation.</p>
+          <a target="_blank" href="../img/donner-assignment-2.2.png" class="btn btn-outline-secondary">ORD</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="card">
+        <img class="card-img-top thumbnail" src="../img/donner-assignment-2.3.png" alt="Adam's wife Amy with their twin boys">
+        <div class="card-body">
+          <h4 class="card-title">Assignment 1.4</h4>
+          <p>This is a diagram of NoSQL of a 1 to 1 and 1 to Many Representation.</p>
+          <a target="_blank" href="../img/donner-assignment-2.3.png" class="btn btn-outline-secondary">NoSQL</a>
         </div>
       </div>
     </div>
