--- a/web-335/donner-diagrams.html
+++ b/web-335/donner-diagrams.html
@@ -19,6 +19,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+            crossorigin="anonymous"></script>
     <!--Using Font Awesome for icons. https://fontawesome.com-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
@@ -52,107 +61,49 @@
 
 
 <!--Presentations and Sketches-->
-<div class="container-fluid padding" id="portfolio">
-  <div class="row welcome text-center">
-    <div class="col-12">
-      <h1 class="display-4">Portfolio</h1>
-    </div>
-    <hr>
-  </div>
-  </div>
 
-  <div class="container-fluid padding">
-  <div class="row padding">
-    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-      <div class="card">
-        <img class="card-img-top thumbnail" src="../img/donner-assignment-1.4-ORD.png" alt="Adam's wife Amy with their twin boys">
-        <div class="card-body">
-          <h4 class="card-title">Assignment 1.4</h4>
-          <p>This is a diagram of both the ORD of a 1 to 1 and 1 to Many Representation.</p>
-          <a target="_blank" href="../img/donner-assignment-1.4-ORD.png" class="btn btn-outline-secondary">ORD</a>
-        </div>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="../img/donner-assignment-1.4-ORD.png" alt="First slide">
       </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-      <div class="card">
-        <img class="card-img-top thumbnail" src="../img/donner-assignment-1.4-NoSQL.png" alt="Adam's wife Amy with their twin boys">
-        <div class="card-body">
-          <h4 class="card-title">Assignment 1.4</h4>
-          <p>This is a diagram of NoSQL of a 1 to 1 and 1 to Many Representation.</p>
-          <a target="_blank" href="../img/donner-assignment-1.4-NoSQL.png" class="btn btn-outline-secondary">NoSQL</a>
-        </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-1.4-NoSQL.png" alt="Second slide">
       </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-      <div class="card">
-        <img class="card-img-top thumbnail" src="../img/donner-assignment-2.2.png" alt="Adam's wife Amy with their twin boys">
-        <div class="card-body">
-          <h4 class="card-title">Assignment 1.4</h4>
-          <p>This is a diagram of both the ORD of a 1 to 1 and 1 to Many Representation.</p>
-          <a target="_blank" href="../img/donner-assignment-2.2.png" class="btn btn-outline-secondary">ORD</a>
-        </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-2.2.png" alt="Third slide">
       </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-      <div class="card">
-        <img class="card-img-top thumbnail" src="../img/donner-assignment-2.3.png" alt="Adam's wife Amy with their twin boys">
-        <div class="card-body">
-          <h4 class="card-title">Assignment 1.4</h4>
-          <p>This is a diagram of NoSQL of a 1 to 1 and 1 to Many Representation.</p>
-          <a target="_blank" href="../img/donner-assignment-2.3.png" class="btn btn-outline-secondary">NoSQL</a>
-        </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-2.3.png" alt="Third slide">
       </div>
-    </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-3.2.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-3.2-nosql.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-3.3-ORD.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../img/donner-assignment-3.3-NoSQL.png" alt="Third slide">
+      </div>
 
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  </div>
-
-  <div class="container-fluid padding">
-    <div class="row padding">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../img/donner-assignment-1.4-ORD.png" target="_blank">
-          <img src="../img/donner-assignment-1.4-ORD.png" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p>This display a 1 to many relationship ORD diagram.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../img/donner-assignment-1.4-NoSQL.png" target="_blank">
-          <img src="../img/donner-assignment-1.4-NoSQL.png" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p>This displays a 1 to many relationship NoSQL diagram.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-      <div class="col-md-4">
-        <div class="thumbnail">
-          <a href="../img/donner-assignment-2.2.png" target="_blank">
-            <img src="../img/donner-assignment-2.2.png" alt="Fjords" style="width:100%">
-            <div class="caption">
-              <p>This describes a shopping diagram with invoices and items.</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../img/donner-assignment-2.3.png" target="_blank">
-          <img src="../img/donner-assignment-2.3.png" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p>This describes a class diagram with students and enrollment.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
 
   <!--- Development approach -->
     <div class="container-fluid padding" id="contactme">
