Added images and videos

--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
     <div class="row padding">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="card">
-          <img class="card-img-top" src="" alt="Presentations">
+          <img class="card-img-top" src="img/presentation.jpg" alt="Presentations">
           <div class="card-body">
             <h4 class="card-title">Web-420 Presentations</h4>
-            <p>Here is the presentations that I have completed for RESTful APIs.</p>
+            <p>Here is the presentations that I have completed for Web-420.</p>
             <a href="web-420/donner-rest.html" class="btn btn-outline-secondary">Presentations</a>
           </div>
         </div>
@@ -218,7 +218,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="card">
-          <img class="card-img-top" src="" alt="Sketches">
+          <img class="card-img-top" src="img/sketch.jpg" alt="Sketches">
           <div class="card-body">
             <h4 class="card-title">Web-335 Sketches</h4>
             <p>Here is the sketches that I have created for Introduction to NoSQL.</p>
