--- a/web-420/donner-rest.html
+++ b/web-420/donner-rest.html
@@ -107,7 +107,38 @@
         </div>
       </div>
       </div>
-
+      <br>
+      <br>
+      <div class="container-fluid padding">
+        <div class="row padding">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">RESTful APIs</h4>
+                <video controls reload="none" style="width:1000px;">
+                  <source src="../restful-api-presentations/json.mp4" type="video/mp4" />
+                  </video> 
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+        <br>
+        <br>
+        <div class="container-fluid padding">
+          <div class="row padding">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">RESTful APIs</h4>
+                  <video controls reload="none" style="width:1000px;">
+                    <source src="../restful-api-presentations/hypermedia.mp4" type="video/mp4" />
+                    </video> 
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
   <!--- Development approach -->
     <div class="container-fluid padding" id="contactme">
       <div class="row padding">
