--- a/web-420/donner-rest.html
+++ b/web-420/donner-rest.html
@@ -98,7 +98,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">RESTful APIs</h4>
+              <h4 class="card-title">SOAP</h4>
               <video controls reload="none" style="width:1000px;">
                 <source src="../restful-api-presentations/soap.mp4" type="video/mp4" />
                 </video> 
@@ -114,7 +114,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="card">
               <div class="card-body">
-                <h4 class="card-title">RESTful APIs</h4>
+                <h4 class="card-title">JSON API</h4>
                 <video controls reload="none" style="width:1000px;">
                   <source src="../restful-api-presentations/json.mp4" type="video/mp4" />
                   </video> 
@@ -130,7 +130,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">RESTful APIs</h4>
+                  <h4 class="card-title">Hypermedia Design</h4>
                   <video controls reload="none" style="width:1000px;">
                     <source src="../restful-api-presentations/hypermedia.mp4" type="video/mp4" />
                     </video> 
