--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
           <div class="card-body">
             <h4 class="card-title">Amy Donner BioSite</h4>
             <p>This is a bioSite that I created for my lovely wife in my web-200 class.</p>
-            <a href="https://adonner.github.io/bioSite/" class="btn btn-outline-secondary">See Website</a>
-            <a href="https://adonner.github.io/bioSite/biosite-prototype.pdf" class="btn btn-outline-secondary">See Prototype</a>
+            <a href="https://adonner.github.io/bioSite/" class="btn btn-outline-secondary">Website</a>
+            <a href="https://adonner.github.io/bioSite/biosite-prototype.pdf" class="btn btn-outline-secondary">Prototype</a>
           </div>
         </div>
       </div>
