--- a/index.html
+++ b/index.html
@@ -209,9 +209,10 @@
           <img class="card-img-top" src="img/api.jpg" alt="Code Image">
           <div class="card-body">
             <h4 class="card-title">REST API Demonstration</h4>
-            <p>Here is a demonstration of an API. Use SoapUI to open XML file for full experience</p>
+            <p>Here is a demonstration of an API Gateway project.</p>
             <a href="docs/api-prod.xml" class="btn btn-outline-secondary" download="API Production">SoapUI XML File</a>
             <a href="https://donner-api-gateway.herokuapp.com" class="btn btn-outline-secondary">Heroku Deployment</a>
+            <a href="https://github.com/adonner/web-420/tree/master/api-gateway" class="btn btn-outline-secondary">GitHub</a>
           </div>
         </div>
       </div>
