--- a/index.html
+++ b/index.html
@@ -221,9 +221,10 @@
         <div class="card">
           <img class="card-img-top" src="img/presentation.jpg" alt="Presentations">
           <div class="card-body">
-            <h4 class="card-title">Web-420 Presentations</h4>
-            <p>Here is the presentations that I have completed for Web-420.</p>
-            <a href="web-420/donner-rest.html" class="btn btn-outline-secondary">Presentations</a>
+            <h4 class="card-title">Presentations</h4>
+            <p>Business Presentations.</p>
+            <a href="web-420/donner-rest.html" class="btn btn-outline-secondary">API Presentations</a>
+            <a href="web-430/donner-tech-value-stream.html" class="btn btn-outline-secondary">DevOps Presentations</a>
           </div>
         </div>
       </div>
