added technology valuestream presentation

--- a/web-430/donner-tech-value-stream.html
+++ b/web-430/donner-tech-value-stream.html
@@ -58,7 +58,7 @@
         <div class="card-body">
           <h4 class="card-title">PLACEHOLDER PRESENTATION</h4>
           <video controls reload="none" style="width:1000px;">
-            <source src="../devops-presentations/" type="video/mp4" />
+            <source src="../devops-presentations/technology-valuestream.mp4" type="video/mp4" />
             </video> 
         </div>
       </div>
