--- a/index.html
+++ b/index.html
@@ -191,56 +191,43 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+              <div class="card">
+                <img class="card-img-top" src="img/api.jpg" alt="Code Image">
+                <div class="card-body">
+                  <h4 class="card-title">REST API Demonstration</h4>
+                  <p>Here is a demonstration of an API Gateway project.</p>
+                  <a href="docs/api-prod.xml" class="btn btn-outline-secondary" download="API Production">SoapUI XML File</a>
+                  <a href="https://donner-api-gateway.herokuapp.com" class="btn btn-outline-secondary">Heroku Deployment</a>
+                  <a href="https://github.com/adonner/web-420/tree/master/api-gateway" class="btn btn-outline-secondary">GitHub</a>
+                </div>
+              </div>
+            </div>
+      
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+              <div class="card">
+                <img class="card-img-top" src="img/presentation.jpg" alt="Presentations">
+                <div class="card-body">
+                  <h4 class="card-title">Presentations</h4>
+                  <p>Business Presentations.</p>
+                  <a href="web-420/donner-rest.html" class="btn btn-outline-secondary">RESTful API Presentations</a>
+                  <a href="web-430/donner-tech-value-stream.html" class="btn btn-outline-secondary">DevOps Presentations</a>
+                </div>
+              </div>
+            </div>
+      
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+              <div class="card">
+                <img class="card-img-top" src="img/sketch.jpg" alt="Sketches">
+                <div class="card-body">
+                  <h4 class="card-title">Web-335 Sketches</h4>
+                  <p>Here is the sketches that I have created for Introduction to NoSQL.</p>
+                  <a href="web-335/donner-diagrams.html" class="btn btn-outline-secondary">Sketches</a>
+                </div>
+              </div>
+            </div>
     </div>
     </div>
-<!--Presentations and Sketches-->
-<div class="container-fluid padding" id="portfolio">
-  <div class="row welcome text-center">
-    <div class="col-12">
-    </div>
-    <hr>
-  </div>
-  </div>
-
-  <div class="container-fluid padding">
-    <div class="row padding">
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-        <div class="card">
-          <img class="card-img-top" src="img/api.jpg" alt="Code Image">
-          <div class="card-body">
-            <h4 class="card-title">REST API Demonstration</h4>
-            <p>Here is a demonstration of an API Gateway project.</p>
-            <a href="docs/api-prod.xml" class="btn btn-outline-secondary" download="API Production">SoapUI XML File</a>
-            <a href="https://donner-api-gateway.herokuapp.com" class="btn btn-outline-secondary">Heroku Deployment</a>
-            <a href="https://github.com/adonner/web-420/tree/master/api-gateway" class="btn btn-outline-secondary">GitHub</a>
-          </div>
-        </div>
-      </div>
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-        <div class="card">
-          <img class="card-img-top" src="img/presentation.jpg" alt="Presentations">
-          <div class="card-body">
-            <h4 class="card-title">Presentations</h4>
-            <p>Business Presentations.</p>
-            <a href="web-420/donner-rest.html" class="btn btn-outline-secondary">API Presentations</a>
-            <a href="web-430/donner-tech-value-stream.html" class="btn btn-outline-secondary">DevOps Presentations</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-        <div class="card">
-          <img class="card-img-top" src="img/sketch.jpg" alt="Sketches">
-          <div class="card-body">
-            <h4 class="card-title">Web-335 Sketches</h4>
-            <p>Here is the sketches that I have created for Introduction to NoSQL.</p>
-            <a href="web-335/donner-diagrams.html" class="btn btn-outline-secondary">Sketches</a>
-          </div>
-        </div>
-      </div>
-  </div>
-  </div>
 
   <!--- Development approach -->
     <div class="container-fluid padding" id="contactme">
