--- a/web-430/donner-tech-value-stream.html
+++ b/web-430/donner-tech-value-stream.html
@@ -149,6 +149,22 @@
               </div>
               <br>
               <br>
+              <div class="container-fluid padding">
+                <div class="row padding">
+                  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title">Technology Driven Decisions vs Business Driven Decisions</h4>
+                        <video controls reload="none" style="width:1000px;">
+                          <source src="../devops-presentations/business-technology.mp4" type="video/mp4" />
+                          </video> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <br>
+                <br>
   <!-- **PLACEHOLDER FOR NEW PRESENTATIONS**
   <div class="container-fluid padding">
     <div class="row padding">
