Added Bobs Logo and Link to Github Repo

--- a/index.html
+++ b/index.html
@@ -191,7 +191,17 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+              <div class="card">
+                <img class="card-img-top" src="img/Bobs.png" alt="Bob's Logo">
+                <div class="card-body">
+                  <h4 class="card-title">Bob's Computer Repair</h4>
+                  <p>Bob's Computer Repair Angular Website</p>
+                  <a href="https://github.com/adonner/web-425/tree/master/donner-bobs/bobs-computer-repair" class="btn btn-outline-secondary">GitHub</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
               <div class="card">
                 <img class="card-img-top" src="img/api.jpg" alt="Code Image">
                 <div class="card-body">
@@ -204,7 +214,7 @@
               </div>
             </div>
       
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
               <div class="card">
                 <img class="card-img-top" src="img/presentation.jpg" alt="Presentations">
                 <div class="card-body">
@@ -216,7 +226,7 @@
               </div>
             </div>
       
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
               <div class="card">
                 <img class="card-img-top" src="img/sketch.jpg" alt="Sketches">
                 <div class="card-body">
